--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="all.css">
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <nav class="navbar"></nav>
+    <h1>Le site de calcul mental de ARndmPlayer et Basty</h1>
+    <a href="http://github.com/Basty7">Basty's GitHub</a>
+    <a href="http://github.com/ARndmPlayer">David's GitHub</a>
 
+</body>
+</html>
