--- a/multiplication.html
+++ b/multiplication.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
+	<!-- <meta charset="UTF-8"> -->
 	<title>Multiplication</title>
-
+	<!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
 	<!-- KaTeX -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css"
 		integrity="sha384-nB0miv6/jRmo5UMMR1wu3Gz6NLsoTkbqJghGIsx//Rlm+ZU03BU6SQNC66uf4l5+" crossorigin="anonymous">
@@ -14,6 +14,7 @@
 		integrity="sha384-7zkQWkzuo3B5mTepMUcHkMB5jZaolc2xDwL6VFqjFALcbeS9Ggm/Yr2r3Dy4lfFg"
 		crossorigin="anonymous"></script>
 	<script defer src="autorender.js"></script>
+	<script defer src="main.js"></script>
 </head>
 
 <body>
@@ -21,11 +22,14 @@
 		2 \times 3 = 6
 	</katex>
 	<br>
-
+	<p id="benge"></p>
 	<katex>
 		2 \times 3 = 6
 	</katex>
 	<br>
+	<katex>
+		\sum^{10}_{i=1} i^2 +3i
+	</katex>
 
 </body>
 
