les bons noms de fichiers stppp

--- a/Additions.html
+++ b/Additions.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>0+0=latêteàtoto</title>
+    <script src="additions.js"></script>
 </head>
 <body>
     <nav class="navbar"></nav>
