--- a/Additions.html
+++ b/Additions.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>0+0=latêteàtoto</title>
     <script src = "main.js"></script>
-    <script src="additions.js"></script>
+    <script src="additions.js" defer></script>
+    <script src="autorender.js"></script>
 </head>
 <body>
     <nav class="navbar"></nav>
     <h1>Les additions</h1>
     
-    <button onclick = additions.js type="button"> Générer des additions aléatoires </button> 
-    <br>
-    
+    <button onclick = "generer()" type="button"> Générer des additions aléatoires </button> 
+    <div id="inserting"></div>
 
     <button class = "bouton" type ="button"> Voir son score </button>
     <!-- box pour le score /10 -->
