--- a/Additions.html
+++ b/Additions.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>0+0=latêteàtoto</title>
-    <script src = "main.js"></script>
-    <script src="additions.js" defer></script>
+    <link rel="stylesheet" href="additions.css">
+    <link rel="stylesheet" href="all.css">
+    <!-- KaTeX -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css"
+        integrity="sha384-nB0miv6/jRmo5UMMR1wu3Gz6NLsoTkbqJghGIsx//Rlm+ZU03BU6SQNC66uf4l5+" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.js"
+        integrity="sha384-7zkQWkzuo3B5mTepMUcHkMB5jZaolc2xDwL6VFqjFALcbeS9Ggm/Yr2r3Dy4lfFg"
+        crossorigin="anonymous"></script>
+    <!-- Other imports -->
+    <script src="main.js"></script>
     <script src="autorender.js"></script>
+    <script src="additions.js" defer></script>
 </head>
+
 <body>
     <nav class="navbar"></nav>
     <h1>Les additions</h1>
-    
-    <button onclick = "generer()" type="button"> Générer des additions aléatoires </button> 
-    <div id="inserting"></div>
 
-    <button class = "bouton" type ="button"> Voir son score </button>
+    <button onclick="generer()" type="button"> Générer des additions aléatoires </button>
+    <div id="inserting">
+        <!-- ici viendront les additions -->
+    </div>
+
+    <button class="bouton" type="button" onclick="score()"> Voir son score </button>
+    <div id="score">
+        <!-- ici viendra le score -->
+    </div>
     <!-- box pour le score /10 -->
 </body>
+
 </html>
