--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 <body>
     <nav class="navbar"></nav>
     <h1>Le site de calcul mental de ARndmPlayer et Basty</h1>
-    <a href="http://github.com/Basty7">Basty's GitHub</a>
+    <div id="pages" class="pages">
+        <a href="addition.html">Addition</a>
+        <a href="soustraction.html">Soustraction</a>
+        <a href="multiplication.html">Multiplication</a>
+        <a href="division.html">Division</a>
+        <a href="tests.html">Tests</a>
+    </div>
+    <a href="http://github.com/Basty7">Basty's GitHub</a> <br>
     <a href="http://github.com/ARndmPlayer">David's GitHub</a>
-    
+
 </body>
 </html>
