petites modifs + ajout de la page racines

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <nav class="navbar"></nav>
     <h1>Le site de calcul mental de ARndmPlayer et Basty</h1>
     <div id="pages" class="pages">
-        <a href="addition.html">Addition</a>
+        <a href="additions.html">Addition</a>
         <a href="soustraction.html">Soustraction</a>
         <a href="multiplication.html">Multiplication</a>
         <a href="division.html">Division</a>
         <a href="tests.html">Tests</a>
+        <a href="racines.html">Racines carrées</a>
     </div>
     <a href="http://github.com/Basty7">Basty's GitHub</a> <br>
     <a href="http://github.com/ARndmPlayer">David's GitHub</a>
