ajout page multiplication

--- a/racines.html
+++ b/racines.html
@@ -22,7 +22,7 @@
     <nav class="navbar"></nav>
     <h1>Les racines carrées</h1>
 
-    <button onclick="generer()" type="button"> Générer des additions aléatoires </button>
+    <button onclick="generer()" type="button"> Générer des racines (carrées) aléatoires </button>
     <div id="inserting">
         <!-- ici viendront racinesoooh -->
     </div>
