--- a/multiplication.html
+++ b/multiplication.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>0+0=latêteàtoto</title>
-    <link rel="stylesheet" href="additions.css">
+    <title>sqrt?4->2</title>
+    <link rel="stylesheet" href="multiplication.css">
     <link rel="stylesheet" href="all.css">
     <!-- KaTeX -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css"
@@ -15,16 +15,16 @@
     <!-- Other imports -->
     <script src="main.js"></script>
     <script src="autorender.js"></script>
-    <script src="additions.js" defer></script>
+    <script src="multiplication.js" defer></script>
 </head>
 
 <body>
     <nav class="navbar"></nav>
-    <h1>Les additions</h1>
+    <h1>Les multiplications</h1>
 
-    <button onclick="generer()" type="button"> Générer des additions aléatoires </button>
+    <button onclick="generer()" type="button"> Générer des multiplications aléatoires </button>
     <div id="inserting">
-        <!-- ici viendront les additions -->
+        <!-- ici viendront multipli -->
     </div>
 
     <button class="bouton" type="button" onclick="score()"> Voir son score </button>
@@ -32,9 +32,6 @@
         <!-- ici viendra le score -->
     </div>
     <!-- box pour le score /10 -->
-
-    <h2>Tips & Tricks</h2>
-    <p> Décomposer l'addition en de petites additions permet <br> Visualiser le calcul</p>
 </body>
 
 </html>
