--- a/Additions.html
+++ b/Additions.html
@@ -34,7 +34,7 @@
     <!-- box pour le score /10 -->
 
     <h2>Tips & Tricks</h2>
-    <p> Décomposer l'addition en de petites additions permet <br> Visualiser le calcul</p>
+    <p> Décomposer l'addition en de petites additions <br> Visualiser le calcul</p>
 </body>
 
 </html>
