--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Le site de calcul mental de ARndmPlayer et Basty</h1>
     <div id="pages" class="pages">
         <a href="additions.html">Addition</a>
-        <a href="soustraction.html">Soustraction</a>
+        <a href="soustractions.html">Soustraction</a>
         <a href="multiplication.html">Multiplication</a>
         <a href="division.html">Division</a>
         <a href="tests.html">Tests</a>
