--- a/racines.html
+++ b/racines.html
@@ -32,6 +32,9 @@
         <!-- ici viendra le score -->
     </div>
     <!-- box pour le score /10 -->
+
+    <h2> Tips & Tricks</h2>
+    <p>Regarder le chiffre des unités <br> Encadrer entre deux carrés "sympas" (par exemple : 20² = 400 et 30² = 900)</p>
 </body>
 
 </html>
