--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="division.html">Division</a>
         <a href="tests.html">Tests</a>
         <a href="racines.html">Racines carrées</a>
+        <a href="Simplification.html">Simplifications d'expressions</a>
     </div>
     <a href="http://github.com/Basty7">Basty's GitHub</a> <br>
     <a href="http://github.com/ARndmPlayer">David's GitHub</a>
