--- a/multiplication.html
+++ b/multiplication.html
@@ -34,7 +34,7 @@
     <!-- box pour le score /10 -->
      
     <h2>Tips & Tricks</h2>
-    <p> Décomposer la soustraction en de petites additions <br> Visualiser le calcul</p>
+    <p> Décomposer la multiplication en de petites additions <br> Visualiser le calcul</p>
 </body>
 
 </html>
