--- a/simplifi/Simplification.html
+++ b/simplifi/Simplification.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>sus-tractions</title>
-    <link rel="stylesheet" href="soustractions.css">
+    <title>0+0=latêteàtoto</title>
+    <link rel="stylesheet" href="simplifi.css">
     <link rel="stylesheet" href="all.css">
     <!-- KaTeX -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css"
@@ -15,16 +15,16 @@
     <!-- Other imports -->
     <script src="main.js"></script>
     <script src="autorender.js"></script>
-    <script src="soustractions.js" defer></script>
+    <script src="simplifi.js" defer></script>
 </head>
 
 <body>
     <nav class="navbar"></nav>
-    <h1>Les soustractions</h1>
+    <h1>Simplifications d'expressions</h1>
 
-    <button onclick="generer()" type="button"> Générer des soustractions aléatoires </button>
+    <button onclick="generer()" type="button"> Générer des expressions aléatoires </button>
     <div id="inserting">
-        <!-- ici viendront les additions -->
+        <!-- ici les calculs -->
     </div>
 
     <button class="bouton" type="button" onclick="score()"> Voir son score </button>
@@ -34,7 +34,7 @@
     <!-- box pour le score /10 -->
 
     <h2>Tips & Tricks</h2>
-    <p> Décomposer la soustraction en plusieurs petites soustractions <br> Visualiser le calcul</p>
+    <p> Voir ce qui peut se simplifier <br> S'accrocher</p>
 </body>
 
 </html>
