--- a/Additions.html
+++ b/Additions.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>0+0=latêteàtoto</title>
+    <title>Entreinement aux additions</title>
     <link rel="stylesheet" href="additions.css">
     <link rel="stylesheet" href="all.css">
     <!-- KaTeX -->
