graphes à plusieurs variables

--- a/graphe.html
+++ b/graphe.html
@@ -16,6 +16,7 @@
     <!-- Other imports -->
     <script src="main.js"></script>
     <script src="autorender.js"></script>
+    <script src="https://cdn.plot.ly/plotly-2.35.2.min.js" charset="utf-8"></script>
     <script src="graphe.js" defer></script>
 </head>
 
