Fin des tests sur la refonte graphique; il ne reste plus qu'à l'implémenter

--- a/tests.html
+++ b/tests.html
@@ -23,9 +23,17 @@
     <h1>Les additions</h1>
 
     <button onclick="generer()" type="button"> Générer des additions aléatoires </button>
-    <div id="inserting">
-        <!-- ici viendront les additions -->
+    <div class="bts">
+        <button onclick="left()">Scroll left</button>
+        <button onclick="right()">Scroll right</button>
     </div>
+    <div class="insParent">
+        <div id="inserting">
+            <!-- ici viendront les additions -->
+        </div>
+    </div>
+
+    
 
     <button class="bouton" type="button" onclick="score()"> Voir son score </button>
     <div id="score">
