création des pages dérivations (et correctino de faute sd'orthographe)

--- a/derivation.html
+++ b/derivation.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Entrainement aux additions</title>
-    <link rel="stylesheet" href="additions.css">
+    <title>Dériver sur un bateau</title>
     <link rel="stylesheet" href="all.css">
     <!-- KaTeX -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css"
@@ -15,14 +14,14 @@
     <!-- Other imports -->
     <script src="main.js"></script>
     <script src="autorender.js"></script>
-    <script src="additions.js" defer></script>
+    <script src="derivation.js" defer></script>
 </head>
 
 <body>
     <nav class="navbar"></nav>
-    <h1>Les additions</h1>
+    <h1>La dérivation</h1>
 
-    <button onclick="generer()" type="button"> Générer des additions aléatoires </button>
+    <button onclick="generer()" type="button"> Générer des fonctions à chavirer</button>
     <div id="inserting">
         <!-- ici viendront les additions -->
     </div>
