j'arrive pas à faire insérer un symbole mathématique (comment activer un bouton en dehors de la fonction qui génère les trucs ?)

--- a/test2.html
+++ b/test2.html
@@ -24,7 +24,8 @@
     <nav class="navbar"></nav>
     <h1>TEST 2</h1>
 
-    <button onclick="generer()" type="button"> Générer aléatoirement </button>
+    <!--<button onclick="generer()" type="button"> Générer aléatoirement </button>
+    <button onclick = "racine()" type="button"> Racine</button> -->
     <div id="inserting">
         <!-- ici les calculs -->
     </div>
