Tests concluant donc implémentation dans les pages

--- a/Additions.html
+++ b/Additions.html
@@ -22,6 +22,11 @@
     <nav class="navbar"></nav>
     <h1>Les additions</h1>
 
+    <div class="bts">
+        <button onclick="left()">Scroll left</button>
+        <button onclick="right()">Scroll right</button>
+    </div>
+
     <button onclick="generer()" type="button"> Générer des additions aléatoires </button>
     <div id="inserting">
         <!-- ici viendront les additions -->
