--- a/derivation.html
+++ b/derivation.html
@@ -22,6 +22,9 @@
     <h1>La dérivation</h1>
 
     <button onclick="generer()" type="button"> Générer des fonctions à chavirer</button>
+    
+    <button onclick = "racine()" type="button"> Racine</button> 
+    <button onclick = "frac()" type="button"> Fraction</button> 
     <div id="inserting">
         <!-- ici viendront les additions -->
     </div>
