--- a/test2.html
+++ b/test2.html
@@ -24,8 +24,9 @@
     <nav class="navbar"></nav>
     <h1>TEST 2</h1>
 
-    <!--<button onclick="generer()" type="button"> Générer aléatoirement </button>
-    <button onclick = "racine()" type="button"> Racine</button> -->
+    <button onclick = "render()" type ="button"> Afficher l'expression mathématique</button>
+    <button onclick = "racine()" type="button"> Racine</button> 
+    <button onclick = "frac()" type="button"> Fraction</button> 
     <div id="inserting">
         <!-- ici les calculs -->
     </div>
