--- a/derivation.html
+++ b/derivation.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Dériver sur un bateau</title>
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" media="(prefers-color-scheme: light)">
+    <link rel="shortcut icon" href="assets/favicon-dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" href="all.css">
     <!-- KaTeX -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css"
@@ -22,9 +24,9 @@
     <h1>La dérivation</h1>
 
     <button onclick="generer()" type="button"> Générer des fonctions à chavirer</button>
-    
-    <button onclick = "racine()" type="button"> Racine</button> 
-    <button onclick = "frac()" type="button"> Fraction</button> 
+
+    <button onclick="racine()" type="button"> Racine</button>
+    <button onclick="frac()" type="button"> Fraction</button>
     <div id="inserting">
         <!-- ici viendront les additions -->
     </div>
