--- a/graphe.html
+++ b/graphe.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>0+0=latêteàtoto</title>
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" media="(prefers-color-scheme: light)">
+    <link rel="shortcut icon" href="assets/favicon-dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
     <!-- <link rel="stylesheet" href="simplifi.css"> -->
     <link rel="stylesheet" href="all.css">
     <!-- KaTeX -->
@@ -12,7 +14,9 @@
     <script src="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.js"
         integrity="sha384-7zkQWkzuo3B5mTepMUcHkMB5jZaolc2xDwL6VFqjFALcbeS9Ggm/Yr2r3Dy4lfFg"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/13.2.1/math.min.js" integrity="sha512-iz0PG1GzN2wn3am0/kPxUH64fB2WRTfqQP6Y1DKgqUSE0UmeUMvXsCtUr6PCvhtSnw71q6VCHYiiFL7P4xD2Aw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/13.2.1/math.min.js"
+        integrity="sha512-iz0PG1GzN2wn3am0/kPxUH64fB2WRTfqQP6Y1DKgqUSE0UmeUMvXsCtUr6PCvhtSnw71q6VCHYiiFL7P4xD2Aw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Other imports -->
     <script src="main.js"></script>
     <script src="autorender.js"></script>
