--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    <title>Calcul mental pour les nuls</title>
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" media="(prefers-color-scheme: light)">
+    <link rel="shortcut icon" href="assets/favicon-dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" href="all.css">
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <nav class="navbar"></nav>
-    <h1>Le site de calcul mental de ARndmPlayer et Basty</h1>
+    <h1>Le calcul mental, pour les pas très très forts</h1>
+    <p>Vous vous êtes toujours senti à la ramasse en calcul mental ? <br>Vous perdez du temps en DS à cause de vos
+        <u><i>piêtres</i></u> capacités calcuatoires ? Ce site est fait pour vous !</p>
     <div id="pages" class="pages">
         <a href="additions.html">Addition</a>
         <a href="soustractions.html">Soustraction</a>
@@ -23,4 +28,5 @@
     <a href="http://github.com/ARndmPlayer">David's GitHub</a>
 
 </body>
+
 </html>
