--- a/multiplication.html
+++ b/multiplication.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>sqrt?4->2</title>
+    <!-- Icône -->
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" media="(prefers-color-scheme: light)">
+    <link rel="shortcut icon" href="assets/favicon-dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
+    <!-- Feuilles CSS -->
     <link rel="stylesheet" href="multiplication.css">
     <link rel="stylesheet" href="all.css">
     <!-- KaTeX -->
@@ -32,7 +36,7 @@
         <!-- ici viendra le score -->
     </div>
     <!-- box pour le score /10 -->
-     
+
     <h2>Tips & Tricks</h2>
     <p> Décomposer la multiplication en de petites additions <br> Visualiser le calcul</p>
 </body>
