--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="tests.html">Tests</a>
         <a href="racines.html">Racines carrées</a>
         <a href="Simplification.html">Simplifications d'expressions</a>
-        <a href="graphe.html">Des graphes !</a>
+        <a href="graphe.html">Graphes</a>
     </div>
     <a href="http://github.com/Basty7">Basty's GitHub</a> <br>
     <a href="http://github.com/ARndmPlayer">David's GitHub</a>
