--- a/derivation.html
+++ b/derivation.html
@@ -27,6 +27,7 @@
 
     <button onclick="racine()" type="button"> Racine</button>
     <button onclick="frac()" type="button"> Fraction</button>
+    <button onclick="expo()" type = "button"> Exponentielle</button>
     <button onclick="latex()" type="button"> Afficher le Latex</button>
     <div id="inserting">
         <!-- ici viendront les additions -->
