--- a/primitive.html
+++ b/primitive.html
@@ -16,7 +16,7 @@
     <!-- Other imports -->
     <script src="main.js"></script>
     <script src="autorender.js"></script>
-    <script src="derivation.js" defer></script>
+    <script src="primitive.js" defer></script>
 </head>
 
 <body>
@@ -40,7 +40,7 @@
     <!-- box pour le score /10 -->
 
     <h2>Tips & Tricks</h2>
-    <p> Connaître ses dérivées <br> être méthodique</p>
+    <p> Connaître ses primitives <br> être méthodique</p>
 </body>
 
 </html>
