--- a/primitive.html
+++ b/primitive.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Dériver sur un bateau</title>
+    <title>Retourner vers ses origines</title>
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" media="(prefers-color-scheme: light)">
     <link rel="shortcut icon" href="assets/favicon-dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" href="all.css">
@@ -21,13 +21,9 @@
 
 <body>
     <nav class="navbar"></nav>
-    <h1>La dérivation</h1>
+    <h1>Trouver une primitive (avec constante nulle)</h1>
 
-    <button onclick="generer()" type="button"> Générer des fonctions à chavirer</button>
-
-    <button onclick="racine()" type="button"> Racine</button>
-    <button onclick="frac()" type="button"> Fraction</button>
-    <button onclick="expo()" type = "button"> Exponentielle</button>
+    <button onclick="generer()" type="button"> Générer des fonctions à primitiver</button>
     <button onclick="latex()" type="button"> Afficher le Latex</button>
     <div id="inserting">
         <!-- ici viendront les additions -->
