Implementation de l'addition polynomiale et une fonction de conversion

--- a/tests.html
+++ b/tests.html
@@ -16,6 +16,7 @@
 	<script src="main.js"></script>
 	<script src="autorender.js"></script>
 	<script src="tests.js" defer></script>
+	<script src="deriveelementaire.js"></script>
 </head>
 
 <body>
@@ -32,6 +33,11 @@
 			<!-- ici viendront les additions -->
 		</div>
 	</div>
+
+	<input type="text" id="P">
+	<input type="text" id="Q">
+	<button id="add">Add</button>
+	<div id="ins"></div>
 
 	<button class="bouton" type="button" onclick="score()"> Voir son score </button>
 	<div id="score">
