correction des pages basiques + création de divsionhtml

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         <a href="racines.html">Racines carrées</a>
         <a href="Simplification.html">Simplifications d'expressions</a>
         <a href="graphe.html">Graphes</a>
+        <a href = "derivation.html">Dérivation </a>
+        <a href = "primitive.html"> Primitive</a>
     </div>
+    <img src = photostress.jpg width = 120px height = 75px > <br>
     <a href="http://github.com/Basty7">Basty's GitHub</a> <br>
     <a href="http://github.com/ARndmPlayer">David's GitHub</a>
 
