--- a/racines.html
+++ b/racines.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>sqrt?4->2</title>
+    <title>L'histoire d'un arbre</title>
     <link rel="stylesheet" href="racines.css">
     <link rel="stylesheet" href="all.css">
     <!-- KaTeX -->
