--- a/Additions.html
+++ b/Additions.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Entrainement aux additions</title>
+	<title>0+0 = ???</title>
 	<link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" media="(prefers-color-scheme: light)">
 	<link rel="shortcut icon" href="assets/favicon-dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
 	<link rel="stylesheet" href="additions.css">
@@ -26,13 +26,15 @@
 
 	<button onclick="generer()" type="button"> Générer des additions aléatoires </button>
 
-	<div class="hide" id="bts">
+	<div class id="bts">
 		<button onclick="left()">Scroll left</button>
 		<button onclick="right()">Scroll right</button>
 	</div>
 
-	<div id="inserting">
-		<!-- ici viendront les additions -->
+	<div class="insParent">
+		<div id="inserting">
+			<!-- ici viendront les additions -->
+		</div>
 	</div>
 
 	<button class="bouton" type="button" onclick="score()"> Voir son score </button>
