--- a/Simplification.html
+++ b/Simplification.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>0+0=latêteàtoto</title>
+    <title>Alléger sa surcharge</title>
     <!-- <link rel="stylesheet" href="simplifi.css"> -->
     <link rel="stylesheet" href="all.css">
     <!-- KaTeX -->
@@ -24,9 +24,16 @@
     <h1>Simplifications d'expressions</h1>
 
     <button onclick="generer()" type="button"> Générer des expressions aléatoires </button>
-    <div id="inserting">
-        <!-- ici les calculs -->
-    </div>
+    <div class="bts">
+		<button onclick="left()">Scroll left</button>
+		<button onclick="right()">Scroll right</button>
+	</div>
+	<div class="insParent">
+		<div id="inserting">
+			<!-- ici viendront les additions -->
+		</div>
+	</div>
+
 
     <button class="bouton" type="button" onclick="score()"> Voir son score </button>
     <div id="score">
