--- a/division.html
+++ b/division.html
@@ -3,36 +3,39 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Des courbatures ?</title>
+    <title>Diviser les peuples</title>
+    <!-- Icône -->
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" media="(prefers-color-scheme: light)">
     <link rel="shortcut icon" href="assets/favicon-dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
-    <!-- <link rel="stylesheet" href="simplifi.css"> -->
+    <!-- Feuilles CSS -->
+    <link rel="stylesheet" href="all.css">
     <!-- KaTeX -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css"
         integrity="sha384-nB0miv6/jRmo5UMMR1wu3Gz6NLsoTkbqJghGIsx//Rlm+ZU03BU6SQNC66uf4l5+" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.js"
         integrity="sha384-7zkQWkzuo3B5mTepMUcHkMB5jZaolc2xDwL6VFqjFALcbeS9Ggm/Yr2r3Dy4lfFg"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/13.2.1/math.min.js"
-        integrity="sha512-iz0PG1GzN2wn3am0/kPxUH64fB2WRTfqQP6Y1DKgqUSE0UmeUMvXsCtUr6PCvhtSnw71q6VCHYiiFL7P4xD2Aw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Other imports -->
     <script src="main.js"></script>
     <script src="autorender.js"></script>
-    <script src="https://cdn.plot.ly/plotly-2.35.2.min.js" charset="utf-8"></script>
-    <script src="graphe.js" defer></script>
-    <link rel="stylesheet" href="graphes.css">
-
+    <script src="division.js" defer></script>
 </head>
 
 <body>
     <nav class="navbar"></nav>
-    <h1>Reconnaissance de courbes affines</h1>
+    <h1>Les divisions</h1>
 
-    <button onclick="generer()" type="button"> Générer des courbes de fonctions affines </button>
-    <div id="insertinggraphe">
-        <!-- ici les calculs -->
-    </div>
+    <button onclick="generer()" type="button"> Générer des divisions aléatoires </button>
+    <div class="bts">
+		<button onclick="left()">Scroll left</button>
+		<button onclick="right()">Scroll right</button>
+	</div>
+	<div class="insParent">
+		<div id="inserting">
+			<!-- ici viendront les additions -->
+		</div>
+	</div>
+
 
     <button class="bouton" type="button" onclick="score()"> Voir son score </button>
     <div id="score">
@@ -41,7 +44,5 @@
     <!-- box pour le score /10 -->
 
     <h2>Tips & Tricks</h2>
-    <p> Quelle est la pente ?<br> Quelle est l'ordonnée à l'origine ?</p>
+    <p> Décomposer la division en de petites additions <br> Visualiser le calcul</p>
 </body>
-
-</html>
