--- a/soustractions.html
+++ b/soustractions.html
@@ -23,10 +23,15 @@
     <h1>Les soustractions</h1>
 
     <button onclick="generer()" type="button"> Générer des soustractions aléatoires </button>
-    <div id="inserting">
-        <!-- ici viendront les additions -->
-    </div>
-
+    <div class="bts">
+		<button onclick="left()">Scroll left</button>
+		<button onclick="right()">Scroll right</button>
+	</div>
+    <div class="insParent">
+		<div id="inserting">
+			<!-- ici viendront les additions -->
+		</div>
+	</div>
     <button class="bouton" type="button" onclick="score()"> Voir son score </button>
     <div id="score">
         <!-- ici viendra le score -->
