--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar"></nav>
     <h1>Le calcul mental, pour les pas très très forts</h1>
     <p>Vous vous êtes toujours senti à la ramasse en calcul mental ? <br>Vous perdez du temps en DS à cause de vos
-        <u><i>piêtres</i></u> capacités calcuatoires ? Ce site est fait pour vous !</p>
+        <u><i>piêtres</i></u> capacités calculatoires ? Ce site est fait pour vous !</p>
     <div id="pages" class="pages">
         <a href="additions.html">Addition</a>
         <a href="soustractions.html">Soustraction</a>
