--- a/Additions.html
+++ b/Additions.html
@@ -14,6 +14,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.js"
 		integrity="sha384-7zkQWkzuo3B5mTepMUcHkMB5jZaolc2xDwL6VFqjFALcbeS9Ggm/Yr2r3Dy4lfFg"
 		crossorigin="anonymous"></script>
+	<!-- Google Fonts: home icon -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=double_arrow" />
 	<!-- Other imports -->
 	<script src="main.js"></script>
 	<script src="autorender.js"></script>
@@ -21,7 +23,11 @@
 </head>
 
 <body>
-	<nav class="navbar"></nav>
+	<div id="homebtn" class="homebtn">
+		<span class="material-symbols-outlined">
+			double_arrow
+			</span>
+	</div>
 	<h1>Les additions</h1>
 
 	<button onclick="generer()" type="button"> Générer des additions aléatoires </button>
