boutons de couleur pour les fractales

--- a/fractales.html
+++ b/fractales.html
@@ -31,11 +31,11 @@
 			<!-- ici viendront les additions -->
 		</div>
 	</div>
-    <button class="bouton" type="button" onclick = score0()"> Un flocon de Koch</button><br>
-    <button class="bouton" type="button" onclick = score1()"> Une fractale de Julia</button><br>
-    <button class="bouton" type="button" onclick = score2()"> L'ensemble de Mandelbrot</button><br>
-    <button class="bouton" type="button" onclick = score3()"> Une éponge de Menger</button><br>
-    <button class="bouton" type="button" onclick = score4()"> Un triangle de Sierpinski</button> <br> <br>
+    <button class="bouton" type="button" onclick = "score0()" style = "color: blue"> Un flocon de Koch</button><br>
+    <button class="bouton" type="button" onclick = "score1()" style = "color: red"> Une fractale de Julia</button><br>
+    <button class="bouton" type="button" onclick = "score2()" style = "color: green"> L'ensemble de Mandelbrot</button><br>
+    <button class="bouton" type="button" onclick = "score3()" style = "color: yellow"> Une éponge de Menger</button><br>
+    <button class="bouton" type="button" onclick = "score4()" style = "color: grey"> Un triangle de Sierpinski</button> <br> <br>
     <button class="bouton" type="button" onclick="score()"> Voir son score </button>
     <div id="score">
         <!-- ici viendra le score -->
