OKAY HOME BTN IS HERE !

--- a/Additions.html
+++ b/Additions.html
@@ -15,7 +15,8 @@
 		integrity="sha384-7zkQWkzuo3B5mTepMUcHkMB5jZaolc2xDwL6VFqjFALcbeS9Ggm/Yr2r3Dy4lfFg"
 		crossorigin="anonymous"></script>
 	<!-- Google Fonts: home icon -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=double_arrow" />
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=double_arrow" />
 	<!-- Other imports -->
 	<script src="main.js"></script>
 	<script src="autorender.js"></script>
@@ -23,11 +24,9 @@
 </head>
 
 <body>
-	<div id="homebtn" class="homebtn">
-		<span class="material-symbols-outlined">
-			double_arrow
-			</span>
-	</div>
+	<a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
+		double_arrow
+	</a>
 	<h1>Les additions</h1>
 
 	<button onclick="generer()" type="button"> Générer des additions aléatoires </button>
