--- a/derivation.html
+++ b/derivation.html
@@ -2,45 +2,47 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Dériver sur un bateau</title>
-    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" media="(prefers-color-scheme: light)">
-    <link rel="shortcut icon" href="assets/favicon-dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
-    <link rel="stylesheet" href="all.css">
-    <!-- KaTeX -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css"
-        integrity="sha384-nB0miv6/jRmo5UMMR1wu3Gz6NLsoTkbqJghGIsx//Rlm+ZU03BU6SQNC66uf4l5+" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.js"
-        integrity="sha384-7zkQWkzuo3B5mTepMUcHkMB5jZaolc2xDwL6VFqjFALcbeS9Ggm/Yr2r3Dy4lfFg"
-        crossorigin="anonymous"></script>
-    <!-- Other imports -->
-    <script src="main.js"></script>
-    <script src="autorender.js"></script>
-    <script src="derivation.js" defer></script>
+	<meta charset="UTF-8">
+	<title>Dériver sur un bateau</title>
+	<link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" media="(prefers-color-scheme: light)">
+	<link rel="shortcut icon" href="assets/favicon-dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
+	<link rel="stylesheet" href="all.css">
+	<!-- KaTeX -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css"
+		integrity="sha384-nB0miv6/jRmo5UMMR1wu3Gz6NLsoTkbqJghGIsx//Rlm+ZU03BU6SQNC66uf4l5+" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.js"
+		integrity="sha384-7zkQWkzuo3B5mTepMUcHkMB5jZaolc2xDwL6VFqjFALcbeS9Ggm/Yr2r3Dy4lfFg"
+		crossorigin="anonymous"></script>
+	<!-- Other imports -->
+	<script src="main.js"></script>
+	<script src="autorender.js"></script>
+	<script src="derivation.js" defer></script>
 </head>
 
 <body>
-    <nav class="navbar"></nav>
-    <h1>La dérivation</h1>
+	<a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
+		double_arrow
+	</a>
+	<h1>La dérivation</h1>
 
-    <button onclick="generer()" type="button"> Générer des fonctions à chavirer</button>
+	<button onclick="generer()" type="button"> Générer des fonctions à chavirer</button>
 
-    <button onclick="racine()" type="button"> Racine</button>
-    <button onclick="frac()" type="button"> Fraction</button>
-    <button onclick="expo()" type = "button"> Exponentielle</button>
-    <button onclick="latex()" type="button"> Afficher le Latex</button>
-    <div id="inserting">
-        <!-- ici viendront les additions -->
-    </div>
+	<button onclick="racine()" type="button"> Racine</button>
+	<button onclick="frac()" type="button"> Fraction</button>
+	<button onclick="expo()" type="button"> Exponentielle</button>
+	<button onclick="latex()" type="button"> Afficher le Latex</button>
+	<div id="inserting">
+		<!-- ici viendront les additions -->
+	</div>
 
-    <button class="bouton" type="button" onclick="score()"> Voir son score </button>
-    <div id="score">
-        <!-- ici viendra le score -->
-    </div>
-    <!-- box pour le score /10 -->
+	<button class="bouton" type="button" onclick="score()"> Voir son score </button>
+	<div id="score">
+		<!-- ici viendra le score -->
+	</div>
+	<!-- box pour le score /10 -->
 
-    <h2>Tips & Tricks</h2>
-    <p> Connaître ses dérivées <br> être méthodique</p>
+	<h2>Tips & Tricks</h2>
+	<p> Connaître ses dérivées <br> être méthodique</p>
 </body>
 
 </html>
