Some visual improvements

--- a/division.html
+++ b/division.html
@@ -26,7 +26,9 @@
 </head>
 
 <body>
-	<nav class="navbar"></nav>
+	<a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
+		double_arrow
+	</a>
 	<h1>Les divisions</h1>
 
 	<button onclick="generer()" type="button"> Générer des divisions aléatoires </button>
