--- a/index.html
+++ b/index.html
@@ -2,34 +2,39 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Calcul mental pour les nuls</title>
-    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" media="(prefers-color-scheme: light)">
-    <link rel="shortcut icon" href="assets/favicon-dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
-    <link rel="stylesheet" href="all.css">
-    <link rel="stylesheet" href="index.css">
+	<meta charset="UTF-8">
+	<title>Calcul mental pour les nuls</title>
+	<link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" media="(prefers-color-scheme: light)">
+	<link rel="shortcut icon" href="assets/favicon-dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
+	<link rel="stylesheet" href="all.css">
+	<link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <nav class="navbar"></nav>
-    <h1>Le calcul mental, pour les pas très très forts</h1>
-    <p>Vous vous êtes toujours senti à la ramasse en calcul mental ? <br>Vous perdez du temps en DS à cause de vos
-        <u><i>piêtres</i></u> capacités calculatoires ? Ce site est fait pour vous !</p>
-    <div id="pages" class="pages">
-        <a href="additions.html">Addition</a>
-        <a href="soustractions.html">Soustraction</a>
-        <a href="multiplication.html">Multiplication</a>
-        <a href="division.html">Division</a>
-        <a href="tests.html">Tests</a>
-        <a href="racines.html">Racines carrées</a>
-        <a href="Simplification.html">Simplifications d'expressions</a>
-        <a href="graphe.html">Graphes</a>
-        <a href = "derivation.html">Dérivation </a>
-        <a href = "primitive.html"> Primitive</a>
-    </div>
-    <img src = photostress.jpg width = 120px height = 75px > <br>
-    <a href="http://github.com/Basty7">Basty's GitHub</a> <br>
-    <a href="http://github.com/ARndmPlayer">David's GitHub</a>
+	<nav class="navbar"></nav>
+	<h1>Le calcul mental, pour les pas très très forts</h1>
+	<p>Vous vous êtes toujours senti à la ramasse en calcul mental ? <br>Vous perdez du temps en DS à cause de vos
+		<u><i>piêtres</i></u> capacités calculatoires ? Ce site est fait pour vous !
+	</p>
+	<div id="pages" class="pages">
+		<a href="additions.html">Addition</a>
+		<a href="soustractions.html">Soustraction</a>
+		<a href="multiplication.html">Multiplication</a>
+		<a href="division.html">Division</a>
+		<a href="racines.html">Racines carrées</a>
+		<a href="Simplification.html">Simplifications d'expressions</a>
+		<a href="graphe.html">Graphes</a>
+		<a href="derivation.html">Dérivation </a>
+		<a href="primitive.html"> Primitive</a>
+		<a href="tests.html">Tests</a>
+	</div>
+	<!-- <img src=photostress.jpg width=120px height=75px> -->
+	<br>
+	<div class="footer">
+		<p>Les développeurs du site:</p>
+		<a href="http://github.com/ARndmPlayer">David's github</a>
+		<a href="http://github.com/Basty7">Basty's github</a>
+	</div>
 
 </body>
 
