les trucs qu'il y avait pas dans fractales

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<a href="derivation.html">Dérivation </a>
 		<a href="primitive.html"> Primitive</a>
 		<a href="tests.html">Tests</a>
+		<a href="fractales.html"> Fractales !</a>
 	</div>
 	<!-- <img src=photostress.jpg width=120px height=75px> -->
 	<br>
