Wrapped all #inserting into .insParent, fixes rendering bugs

--- a/racines.html
+++ b/racines.html
@@ -28,8 +28,10 @@
 	<h1>Les racines carrées</h1>
 
 	<button onclick="generer()" type="button"> Générer des racines (carrées) aléatoires </button>
-	<div id="inserting">
-		<!-- ici viendront racinesoooh -->
+	<div class="insParent">
+		<div id="inserting">
+			<!-- ici viendront racinesoooh -->
+		</div>
 	</div>
 
 	<button class="bouton" type="button" onclick="score()"> Voir son score </button>
