--- a/derivation.html
+++ b/derivation.html
@@ -35,8 +35,10 @@
 	<button onclick="frac()" type="button"> Fraction</button>
 	<button onclick="expo()" type="button"> Exponentielle</button>
 	<button onclick="latex()" type="button"> Afficher le Latex</button>
-	<div id="inserting">
-		<!-- ici viendront les additions -->
+	<div class="insParent">
+		<div id="inserting">
+			<!-- ici viendront les additions -->
+		</div>
 	</div>
 
 	<button class="bouton" type="button" onclick="score()"> Voir son score </button>
