--- a/multiplication.html
+++ b/multiplication.html
@@ -36,8 +36,10 @@
 		<button onclick="right()">Scroll right</button>
 	</div>
 	<button onclick="generer()" type="button"> Générer des multiplications aléatoires </button>
-	<div id="inserting">
-		<!-- ici viendront multipli -->
+	<div class="insParent">
+		<div id="inserting">
+			<!-- ici viendront multipli -->
+		</div>
 	</div>
 
 	<button class="bouton" type="button" onclick="score()"> Voir son score </button>
