--- a/fractales.html
+++ b/fractales.html
@@ -26,6 +26,9 @@
 </head>
 
 <body>
+    <a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
+		double_arrow
+	</a>
 	<nav class="navbar"></nav>
 	<h1>Les jolies fractales</h1>
 
