--- a/fractales.html
+++ b/fractales.html
@@ -44,7 +44,7 @@
     <button class="bouton" type="button" onclick = "score2()" style = "color: green"> L'ensemble de Mandelbrot</button><br>
     <button class="bouton" type="button" onclick = "score3()" style = "color: yellow"> Une éponge de Menger</button><br>
     <button class="bouton" type="button" onclick = "score4()" style = "color: grey"> Un triangle de Sierpinski</button> <br> <br>
-    <button class="bouton" type="button" onclick="score()"> Voir son score </button>
+    <button class="bouton" type="button" onclick="score()"> Vérifier</button>
     <div id="score">
         <!-- ici viendra le score -->
     </div>
