--- a/Additions.html
+++ b/Additions.html
@@ -28,12 +28,12 @@
 		double_arrow
 	</a>
 	<h1>Les additions</h1>
-
+	<p> Appuyez sur le bouton pour générer dix calculs. Cliquez ensuite sur le bouton "voir mon score" pour connaître votre résultat.</p>
 	<button onclick="generer()" type="button"> Générer des additions aléatoires </button>
 
 	<div class id="bts">
-		<button onclick="left()">Scroll left</button>
-		<button onclick="right()">Scroll right</button>
+		<button onclick="left()">Calcul précédent</button>
+		<button onclick="right()">Calcul suivant</button>
 	</div>
 
 	<div class="insParent">
