--- a/Simplification.html
+++ b/Simplification.html
@@ -30,12 +30,12 @@
 		double_arrow
 	</a>
 	<h1>Simplifications d'expressions</h1>
-
-	<button onclick="generer()" type="button"> Générer des expressions aléatoires </button>
+	<p> Appuyez sur le bouton pour générer dix calculs. Cliquez ensuite sur le bouton "voir mon score" pour connaître votre résultat.</p>
 	<div class="bts">
-		<button onclick="left()">Scroll left</button>
-		<button onclick="right()">Scroll right</button>
+		<button onclick="left()">Calcul précédent</button>
+		<button onclick="right()">Calcul suivant</button>
 	</div>
+	<button onclick="generer()" type="button"> Générer des expressions aléatoires </button>
 	<div class="insParent">
 		<div id="inserting">
 			<!-- ici viendront les additions -->
