--- a/graphe.html
+++ b/graphe.html
@@ -33,7 +33,7 @@
 		double_arrow
 	</a>
 	<h1>Reconnaissance de courbes affines</h1>
-
+	<p>Appuyez sur le bouton pour générer des courbes affines à identifier.</p>
 	<button onclick="generer()" type="button"> Générer des courbes de fonctions affines </button>
 	<div id="insertinggraphe">
 		<!-- ici les calculs -->
