--- a/multiplication.html
+++ b/multiplication.html
@@ -30,10 +30,10 @@
 		double_arrow
 	</a>
 	<h1>Les multiplications</h1>
-
+	<p> Appuyez sur le bouton pour générer dix calculs. Cliquez ensuite sur le bouton "voir mon score" pour connaître votre résultat.</p>
 	<div class="bts">
-		<button onclick="left()">Scroll left</button>
-		<button onclick="right()">Scroll right</button>
+		<button onclick="left()">Calcul précédent</button>
+		<button onclick="right()">Calcul suivant</button>
 	</div>
 	<button onclick="generer()" type="button"> Générer des multiplications aléatoires </button>
 	<div class="insParent">
