--- a/racines.html
+++ b/racines.html
@@ -26,8 +26,13 @@
 		double_arrow
 	</a>
 	<h1>Les racines carrées</h1>
+	<p> Appuyez sur le bouton pour générer dix calculs. Cliquez ensuite sur le bouton "voir mon score" pour connaître votre résultat.</p>
+	<button onclick="generer()" type="button"> Générer des racines carrées aléatoires </button>
+	<div class="bts">
+		<button onclick="left()">Calcul précédent</button>
+		<button onclick="right()">Calcul suivant</button>
+	</div>
 
-	<button onclick="generer()" type="button"> Générer des racines (carrées) aléatoires </button>
 	<div class="insParent">
 		<div id="inserting">
 			<!-- ici viendront racinesoooh -->
